# mamezou-tech-site

./: .eleventy.js  .gitignore  .textlintrc  LICENSE.txt  README.md  _config.ts  author-tips.md  build-netlify.sh  deno.json  eleventy.cjs  eleventy.config.cjs  eleventy.config.cjs.ignore  gha-creds-7a2e0059295a11a8.json  google_auth.json  import_map.json  lint.ts  markdown-it-custom-renderer.js  netlify.toml  ogp-style.css  package-lock.json  package.json  prism-deps.ts  rollup.config.mjs  scope_updates.ts  tailwind.config.js
.devcontainer/: Dockerfile  compose.yaml  devcontainer.env  devcontainer.json
11ty/: blog-page.cjs  blog-page.js  chat-gpt.cjs  contributor-articles.cjs  contributor-articles.js  contributor-articles.ts  excerpt.cjs  excerpt.js  excerpt.ts  get-date.cjs  get-date.ts  head.cjs  head.js  page-tags.cjs  page-tags.js  reading-time.js  short-desc.cjs  short-desc.js  short-desc.ts  slug.cjs  slug.js  tag-articles.cjs  tag-articles.js  tag-list.cjs  tag-list.js  utils.cjs  utils.js  valid-tags.ts
cms-mail-templates/: confirmation.html  email-change.html  invitation.html  password-recovery.html
ga/: author-report.ts  chat-gpt.mjs  chat-gpt.ts  daily-article-report.ts  daily-notifier.mjs  (+13 more)
openai/: Cargo.toml  README.md  article-generator.ts  chat-gpt.ts  config.toml  config.ts  package-lock.json  package.json  prompt-message.ts  prompt.ts  review-article.ts
openai/src/: app_config.rs  chat_stream_writer.rs  lib.rs  markdown.rs  path_resolver.rs  tiktoken.rs
openai/ts/util/: chat-gpt.ts  openai-client.ts
openai/util/: chat-gpt.ts  parse-article.ts
(+2086 files in other folders)
